--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -2,4 +2,4 @@ product.property=Product Profile Dev
 
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/productdb
 
-app.testProd= Property of test
+app.testProd= Property of test Updated
