--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,3 +1,3 @@
 product.property=Product Profile Dev
 
-app.testProd= Property of test NO Updated
+app.testProd= Property of test Updated for BUS and Message Broker
